# photoink

./: LICENSE  README.md  prepare_photos.py  pyproject.toml  stand_3d_model.scad
controller/: code.py
spectra/: code.py  prepare_photos.py
