[tool.poetry]
name = "photoink"
version = "0.1.0"
description = ""
authors = ["Tomas Protivinsky <tomas.protivinsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
